Finished vectors, added cros spaltform comparisn